# DLC_TestForge

./: README.md  pyproject.toml
dlc_testforge/: __init__.py  agent.py  classify.py  cli.py  extract_kernel.py  extract_spec.py  extract_td.py  generate.py  index.py  paths.py  reduce.py  report.py  run_command.py  schemas.py  validate.py
dlc_testforge/profiles/: __init__.py  globalisel.yaml  machine_addropt.yaml
docs/: KERNEL_USAGE_EVIDENCE_IMPLEMENTATION_PLAN.md  SEED_LL_FULL_FILE_AGENT_MUTATION_PROPOSAL.md
tests/: test_agent.py  test_classify.py  test_cli.py  test_extract_kernel.py  test_extract_spec.py  test_extract_td.py  test_generate.py  test_index.py  test_paths.py  test_profiles.py  test_reduce.py  test_report.py  test_validate.py
