[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dlc-testforge"
version = "0.1.0"
description = "DLC CodeGen test mutation harness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["dlc_testforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
